fix(atom/slider): fix slider label alignement

--- a/components/atom/slider/src/index.scss
+++ b/components/atom/slider/src/index.scss
@@ -21,6 +21,7 @@ $p-atom-slider: $p-l !default;
 
 $mt-atom-slider-mark: 10px !default;
 
+$base-class: '.sui-AtomSlider';
 $base-class-rc-slider: '.rc-slider';
 $class-handle: '#{$base-class-rc-slider}-handle';
 $class-disabled: '#{$base-class-rc-slider}-disabled';
@@ -36,7 +37,7 @@ $class-tooltip-inner: '#{$class-tooltip}-inner';
 $class-tooltip-arrow: '#{$class-tooltip}-arrow';
 $class-tooltip-hidden: '#{$class-tooltip}-hidden';
 
-.sui-AtomSlider {
+#{$base-class} {
   font-family: $ff-atom-slider;
   font-size: $fz-atom-slider;
   padding: $p-atom-slider;
@@ -110,10 +111,24 @@ $class-tooltip-hidden: '#{$class-tooltip}-hidden';
     color: $c-atom-slider;
   }
 
-  &-label {
-    display: block;
-    margin-bottom: $m-m;
-    margin-left: $ml-atom-slider-label;
+  &-labelContainer {
+    box-sizing: border-box;
+    position: relative;
+    width: 100%;
+    &--inner {
+      position: absolute;
+      width: 100%;
+      bottom: 0;
+    }
+    #{$base-class}-label {
+      position: absolute;
+      display: inline-block;
+      vertical-align: middle;
+      text-align: center;
+      transform: translateX(-50%);
+      bottom: $m-m;
+      box-sizing: border-box;
+    }
   }
 
   &--disabled {
